# fastapi-foundation

./: .env.example  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  run.py
.github/workflows/: docs.yml
.specify/: init-options.json  integration.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
api/api-environment/: index.html
api/app-registry/: index.html
api/tenant-isolation/: index.html
architecture/: index.html
docs/architecture/: 00-overall-design.md  01-foundation-roadmap.md  02-platform-access-settings-development.md  03-current-tenant-api-contract.md  04-frontend-access-design.md
docs/decisions/: 0001-core-and-app-boundary.md
docs/modules/: 00-index.md  app-development-guide.md  app-module-contract.md  core-admin-registry.md  core-api-conventions.md  core-app-registry.md  core-app-runtime.md  core-auth.md  core-base-classes.md  core-cache.md  core-cli.md  core-config.md  core-context.md  core-database.md  core-events.md  core-exceptions.md  core-http-clients.md  core-idempotency.md  core-locks.md  core-messages.md  core-migrations.md  core-mq.md  core-observability.md  core-outbox.md  core-permission-model.md  core-permissions.md  core-quotas.md  core-rate-limit.md  core-scheduler.md  core-security.md  core-serialization.md  core-storage.md  core-tasks.md  core-tenancy.md  core-tenant-isolation.md  core-testing.md  error-responses.md  i18n.md  (+7 more)
documents/: README.md  architecture.md  index.md  quickstart.md
quickstart/: index.html
search/: search_index.json
(+390 files in other folders)
